--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Hello world</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae quos in fuga iure debitis possimus non ex sint necessitatibus facilis enim voluptate, sed, velit dolores. Odit nisi id ducimus exercitationem?</p>
 </body>
 </html>
